Bug 96226 - REGRESSION (r128006): Three spatial navigation tests are failing
Summary: REGRESSION (r128006): Three spatial navigation tests are failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P1 Normal
Assignee: Emil A Eklund
URL: http://build.webkit.org/results/Apple...
Keywords: LayoutTestFailure, MakingBotsRed, Regression
Depends on: 96233
Blocks: 79666 81413 96880
  Show dependency treegraph
 
Reported: 2012-09-09 22:00 PDT by mitz
Modified: 2013-04-18 11:01 PDT (History)
8 users (show)

See Also:


Attachments
Patch (7.88 KB, patch)
2012-09-12 17:40 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff
Patch for landing (7.84 KB, patch)
2012-09-13 18:24 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff
Patch for landing (7.75 KB, patch)
2012-09-14 12:27 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff
Unskipping the tests of this bug, there are passing and the bug was fixed yet. (1.38 KB, patch)
2012-10-03 16:16 PDT, Tullio Lucena
eae: review+
eae: commit-queue+
Details | Formatted Diff | Diff
Patch (1.45 KB, patch)
2012-10-08 12:23 PDT, Tullio Lucena
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description mitz 2012-09-09 22:00:39 PDT
After <http://trac.webkit.org/r128006>, fast/spatial-navigation/snav-container-white-space.html, fast/spatial-navigation/snav-div-overflow-scrol-hidden.html, and fast/spatial-navigation/snav-imagemap-overlapped-areas.html are failing.
Comment 1 mitz 2012-09-09 22:01:01 PDT
r128006 was the fix for bug 81413.
Comment 2 Csaba Osztrogonác 2012-09-09 22:49:49 PDT
--- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-container-white-space-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-container-white-space-actual.txt 
@@ -4,10 +4,10 @@
 This is an element
   
 This is an element
-PASS gFocusedDocument.activeElement.getAttribute("id") is "1"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "2"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "3"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "4"
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 1. Was 2.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 2. Was 3.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 3. Was 4.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 4. Was 5.
 PASS gFocusedDocument.activeElement.getAttribute("id") is "5"
 PASS gFocusedDocument.activeElement.getAttribute("id") is "4"
 PASS gFocusedDocument.activeElement.getAttribute("id") is "3"


--- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-div-overflow-scrol-hidden-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-div-overflow-scrol-hidden-actual.txt 
@@ -9,10 +9,10 @@
 
 PASS gFocusedDocument.activeElement.getAttribute("id") is "f2"
 PASS gFocusedDocument.activeElement.getAttribute("id") is "f3"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "f3"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "f4"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "f4"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "f5"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "f6"
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be f3. Was f4.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be f4. Was f5.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be f4. Was f6.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be f5. Was f6.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be f6. Was f9.
 PASS gFocusedDocument.activeElement.getAttribute("id") is "f9"
 This test is testing that div with overflow:auto would scroll, by div with overflow:hidden would not.


--- /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-imagemap-overlapped-areas-expected.txt 
+++ /ramdisk/qt-linux-64-release/build/layout-test-results/fast/spatial-navigation/snav-imagemap-overlapped-areas-actual.txt 
@@ -1,9 +1,9 @@
  
 
 
-PASS gFocusedDocument.activeElement.getAttribute("id") is "4"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "1"
-PASS gFocusedDocument.activeElement.getAttribute("id") is "2"
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 4. Was 1.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 1. Was 2.
+FAIL gFocusedDocument.activeElement.getAttribute("id") should be 2. Was 5.
 PASS gFocusedDocument.activeElement.getAttribute("id") is "5"
 PASS gFocusedDocument.activeElement.getAttribute("id") is "4"
 PASS gFocusedDocument.activeElement.getAttribute("id") is "3"
Comment 3 Csaba Osztrogonác 2012-09-09 22:54:08 PDT
I skipped them on Qt - https://trac.webkit.org/changeset/128017.
Please unskip with the proper fix.
Comment 4 Chris Dumez 2012-09-09 23:36:27 PDT
I'm skipping those tests for EFL port in Bug 96233.
Please unskip them with proper fix. TIA.
Comment 5 Zan Dobersek 2012-09-10 05:02:58 PDT
Seems a bit like disabled subpixel rendering could be the issue as the tests seem to behave OK on Chromium:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20webkit.org&tests=fast%2Fspatial-navigation
Comment 6 mitz 2012-09-10 07:37:41 PDT
Added the failing tests to the Mac skip list in r128060.
Comment 7 Emil A Eklund 2012-09-10 08:22:41 PDT
Thanks, looking into it.
Comment 8 Emil A Eklund 2012-09-12 17:40:40 PDT
Created attachment 163744 [details]
Patch
Comment 9 Emil A Eklund 2012-09-12 17:41:15 PDT
I still plan to remove those methods but due to an unexpected edge case it'll take longer than I had though, so for now I'm reverting.
Comment 10 Ryosuke Niwa 2012-09-13 15:29:30 PDT
Comment on attachment 163744 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=163744&action=review

rs=me. I've verified that this patch reverts http://trac.webkit.org/changeset/128006/trunk/Source/WebCore/dom/ContainerNode.cpp.

> Source/WebCore/dom/ContainerNode.cpp:762
> +                // do nothing - skip unrendered whitespace that is a child or next sibling of the anchor

Wont indentation.

> Source/WebCore/dom/ContainerNode.cpp:767
> +                           toRenderText(o)->firstTextBox()->root()->lineTop());

Ditto.
Comment 11 Emil A Eklund 2012-09-13 18:24:33 PDT
Created attachment 164024 [details]
Patch for landing
Comment 12 WebKit Review Bot 2012-09-13 18:26:59 PDT
Comment on attachment 164024 [details]
Patch for landing

Rejecting attachment 164024 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
ng file Source/WebCore/dom/ContainerNode.cpp
Hunk #1 succeeded at 727 (offset 7 lines).
patching file Source/WebCore/dom/ContainerNode.h
patching file LayoutTests/ChangeLog
Hunk #1 succeeded at 1 with fuzz 3.
patching file LayoutTests/platform/mac/Skipped
Hunk #1 FAILED at 1006.
1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/mac/Skipped.rej

Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue

Full output: http://queues.webkit.org/results/13854231
Comment 13 Emil A Eklund 2012-09-14 12:27:41 PDT
Created attachment 164205 [details]
Patch for landing
Comment 14 WebKit Review Bot 2012-09-14 13:01:16 PDT
Comment on attachment 164205 [details]
Patch for landing

Clearing flags on attachment: 164205

Committed r128644: <http://trac.webkit.org/changeset/128644>
Comment 15 WebKit Review Bot 2012-09-14 13:01:21 PDT
All reviewed patches have been landed.  Closing bug.
Comment 16 Tullio Lucena 2012-10-03 16:16:42 PDT
Created attachment 166986 [details]
Unskipping the tests of this bug, there are passing and the bug was fixed yet.
Comment 17 Tullio Lucena 2012-10-08 12:23:08 PDT
Created attachment 167585 [details]
Patch

Updating patch
Comment 18 Csaba Osztrogonác 2012-10-09 06:00:18 PDT
Comment on attachment 167585 [details]
Patch

unskipped by https://bugs.webkit.org/show_bug.cgi?id=96226
Comment 19 Csaba Osztrogonác 2012-10-09 06:00:30 PDT
Comment on attachment 167585 [details]
Patch

unskipped by https://trac.webkit.org/changeset/130752
Comment 20 Jessie Berlin 2013-04-18 11:01:41 PDT
*** Bug 96438 has been marked as a duplicate of this bug. ***