https://bugs.webkit.org/show_bug.cgi?id=96226 REGRESSION (r128006): Three spatial navigation tests are failing

Reviewed by Ryosuke Niwa.

Source/WebCore:

Fix spatial navigation regression by reverting parts of r128006.
Specifically the change to remove the overridden boundingBox
method in ContainerNode.

* dom/ContainerNode.cpp:
(WebCore::ContainerNode::getUpperLeftCorner):
(WebCore):
(WebCore::ContainerNode::getLowerRightCorner):
(WebCore::ContainerNode::boundingBox):
* dom/ContainerNode.h:
(ContainerNode):

LayoutTests:

Remove spatial navigation tests from Skipped list.

* platform/mac/Skipped:


Canonical link: https://commits.webkit.org/114730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128644 268f45cc-cd09-0410-ab3c-d52691b4dbfc